--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@nuxtjs/sitemap": "^2.4.0",
         "bulma": "^0.9.0",
         "cross-env": "^7.0.2",
+        "jstat": "^1.9.3",
         "nuxt": "^2.14.4"
     },
     "devDependencies": {
