--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "hikarut",
     "private": true,
     "scripts": {
-        "dev": "cross-env NODE_ENV='dev' nuxt-ts",
+        "dev": "NODE_OPTIONS=--openssl-legacy-provider cross-env NODE_ENV='dev' nuxt-ts",
         "preview": "cross-env NODE_ENV='preview' nuxt-ts",
         "prod": "cross-env NODE_ENV='prod' nuxt-ts",
         "build": "nuxt-ts build",
@@ -20,10 +20,11 @@
         "@nuxtjs/axios": "^5.12.2",
         "@nuxtjs/google-adsense": "^1.1.3",
         "@nuxtjs/sitemap": "^2.4.0",
-        "bulma": "^0.9.0",
+        "bulma": "^1.0.1",
         "cross-env": "^7.0.2",
         "jstat": "^1.9.3",
-        "nuxt": "^2.14.4"
+        "nuxt": "^2.14.4",
+        "sass": "^1.77.4"
     },
     "devDependencies": {
         "@babel/core": "^7.11.6",
@@ -45,7 +46,6 @@
         "kind-of": ">=6.0.3",
         "lodash": ">=4.17.19",
         "minimist": ">=1.2.3",
-        "node-sass": "^4.14.1",
         "nodemon": "^2.0.4",
         "prettier": "2.1.1",
         "sass-loader": "^10.0.2",
