--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "prod": "cross-env NODE_ENV='prod' nuxt-ts",
         "build": "NODE_OPTIONS=--openssl-legacy-provider nuxt-ts build",
         "start": "NODE_OPTIONS=--openssl-legacy-provider nuxt-ts start",
-        "generate:dev": "NODE_OPTIONS=--openssl-legacy-provider cross-env NODE_ENV='dev' nuxt-ts generate",
+        "generate:dev": "cross-env NODE_ENV='dev' nuxt-ts generate",
         "generate:preview": "cross-env NODE_ENV='preview' nuxt-ts generate",
         "generate:prod": "cross-env NODE_ENV='prod' nuxt-ts generate",
         "test": "jest"
