--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "dev": "NODE_OPTIONS=--openssl-legacy-provider cross-env NODE_ENV='dev' nuxt-ts",
         "preview": "cross-env NODE_ENV='preview' nuxt-ts",
         "prod": "cross-env NODE_ENV='prod' nuxt-ts",
-        "build": "NODE_OPTIONS=--openssl-legacy-provider nuxt-ts build",
-        "start": "NODE_OPTIONS=--openssl-legacy-provider nuxt-ts start",
+        "build": "nuxt-ts build",
+        "start": "nuxt-ts start",
         "generate:dev": "cross-env NODE_ENV='dev' nuxt-ts generate",
         "generate:preview": "cross-env NODE_ENV='preview' nuxt-ts generate",
         "generate:prod": "cross-env NODE_ENV='prod' nuxt-ts generate",
