--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "cross-env": "^7.0.2",
         "jstat": "^1.9.3",
         "nuxt": "^2.14.4",
-        "sass": "^1.77.4"
+        "sass": "^1.77.4",
+        "node-fetch-native": "^2.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.11.6",
