--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "test": "jest"
     },
     "dependencies": {
+        "@nuxt/cli-edge": "^2.17.2-28284499.5674f49",
         "@nuxt/typescript-runtime": "^2.0.0",
         "@nuxtjs/axios": "^5.12.2",
         "@nuxtjs/google-adsense": "^1.1.3",
