--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "test": "jest"
     },
     "dependencies": {
-        "@nuxt/cli-edge": "^2.17.2-28284499.5674f49",
+        "@nuxt/cli-edge": "^2.17.4-28628517.5a668c5",
+        "@nuxt/core-edge": "^2.17.4-28628517.5a668c5",
         "@nuxt/typescript-runtime": "^2.0.0",
         "@nuxtjs/axios": "^5.12.2",
         "@nuxtjs/google-adsense": "^1.1.3",
