--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,4 @@
 {
-  "singleQuote": true,
-  "semi": true,
-  "rules": {
-    "prettier/prettier": ["warn", {
-      "singleQuote": false,
-      "trailingComma": "none"
-    }]
-  }
+  "semi": false,
+  "singleQuote": true
 }
