--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,8 @@
 
 [build]
   node_version = "18.17.1"
+
+[[redirects]]
+  from = "/sql_everyone"
+  to = "https://sql-everyone.com/"
+  status = 301
